RESOLVED FIXED237972
REGRESSION (r285529): Flash of missing text when content on https://ahumanfuture.co animates
https://bugs.webkit.org/show_bug.cgi?id=237972
Summary REGRESSION (r285529): Flash of missing text when content on https://ahumanfut...
Simon Fraser (smfr)
Reported 2022-03-16 11:56:38 PDT
Attachments
Patch (8.74 KB, patch)
2022-03-18 09:01 PDT, Antoine Quint
no flags
Radar WebKit Bug Importer
Comment 1 2022-03-16 12:19:42 PDT
Antoine Quint
Comment 2 2022-03-18 08:46:39 PDT
*** Bug 238067 has been marked as a duplicate of this bug. ***
Antoine Quint
Comment 3 2022-03-18 09:01:01 PDT
Kenneth Russell
Comment 4 2022-03-18 12:12:07 PDT
Note also Bug 237918, where one test case was affected both by this and another bug.
Antoine Quint
Comment 5 2022-03-18 13:00:17 PDT
(In reply to Kenneth Russell from comment #4) > Note also Bug 237918, where one test case was affected both by this and > another bug. I believe the bug was bug 238067.
Kenneth Russell
Comment 6 2022-03-18 13:54:35 PDT
There was a test case in Bug 237918 that was affected by this bug too. https://bugs.webkit.org/show_bug.cgi?id=237918#c7
Antoine Quint
Comment 7 2022-03-18 16:29:53 PDT
(In reply to Kenneth Russell from comment #6) > There was a test case in Bug 237918 that was affected by this bug too. > https://bugs.webkit.org/show_bug.cgi?id=237918#c7 Yes, that was bug 238067.
Kenneth Russell
Comment 8 2022-03-18 17:11:29 PDT
Understood. Bug 238067 had Bug 237918 in its "see also" list and I wanted this one to have it, too, to make them easier to find in the future if necessary.
EWS
Comment 9 2022-03-19 04:42:54 PDT
Committed r291526 (248632@main): <https://commits.webkit.org/248632@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455097 [details].
Antoine Quint
Comment 10 2022-04-04 01:27:08 PDT
*** Bug 238696 has been marked as a duplicate of this bug. ***
Antoine Quint
Comment 11 2022-04-22 02:42:12 PDT
*** Bug 239582 has been marked as a duplicate of this bug. ***
Sam Sneddon [:gsnedders]
Comment 12 2022-05-16 15:41:11 PDT
Just to let everyone know, for those who care about Safari, the fix for this has shipped in Safari 15.5.
Note You need to log in before you can comment on or make changes to this bug.